# Optivision

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt  tran_cap.py  webserver.py
src/optivision/: api.py  config.py
src/optivision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/optivision/models/: detector.py  scene.py
src/optivision/services/: ocr_space.py
src/optivision/utils/: images.py  text_narrator.py  weather.py
